# freecad-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
addon/FreeCADMCP/rpc_server/: property_mapper.py
src/freecad_mcp/: freecad_client.py  server.py
src/freecad_mcp/operations/: core.py
tests/: test_ip_filter.py  test_operations.py  test_property_mapper.py  test_responses.py
